--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,208 +3,183 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03b878ce",
+   "id": "4e01a7b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ADWP Processing Notebook (memory-friendly)\n",
-    "\n",
-    "import os\n",
-    "import tempfile\n",
-    "import csv\n",
-    "from datetime import datetime\n",
-    "from dateutil import parser as dateparser\n",
+    "# ADWP.ipynb\n",
     "\n",
     "import pandas as pd\n",
-    "from openpyxl import load_workbook\n",
-    "from ipywidgets import interact, Dropdown\n",
-    "import tkinter as tk\n",
-    "from tkinter import filedialog\n",
-    "from tqdm.notebook import tqdm\n",
+    "import calendar\n",
+    "from datetime import datetime\n",
+    "from tkinter import Tk, filedialog\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "import os\n",
     "\n",
     "# -------------------------\n",
-    "# Helpers\n",
+    "# Step 1. File selection\n",
     "# -------------------------\n",
-    "def month_label(dt):\n",
-    "    return dt.strftime(\"%b-%y\")\n",
-    "\n",
-    "def first_of_month_from_str(s):\n",
-    "    if pd.isna(s) or str(s).strip() == \"\":\n",
-    "        return None\n",
-    "    try:\n",
-    "        d = dateparser.parse(str(s), dayfirst=False)\n",
-    "        return d.replace(day=1)\n",
-    "    except Exception:\n",
-    "        return None\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 1: File picker\n",
-    "# -------------------------\n",
-    "root = tk.Tk()\n",
-    "root.withdraw()  # hide root window\n",
-    "excel_path = filedialog.askopenfilename(\n",
-    "    title=\"Select Excel file\",\n",
-    "    filetypes=[(\"Excel files\", \"*.xlsx *.xlsm *.xls\")]\n",
-    ")\n",
-    "if not excel_path:\n",
-    "    raise SystemExit(\"No file selected.\")\n",
-    "\n",
-    "print(\"Selected file:\", excel_path)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 2: Dropdown for year and month\n",
-    "# -------------------------\n",
-    "this_year = datetime.today().year\n",
-    "years = [this_year-1, this_year, this_year+1]\n",
-    "months = [(i, datetime(2000, i, 1).strftime(\"%B\")) for i in range(1,13)]\n",
-    "\n",
-    "def choose_params(year, month):\n",
-    "    global selected_year, selected_month\n",
-    "    selected_year = int(year)\n",
-    "    selected_month = int(month)\n",
-    "    print(f\"Selected Year = {selected_year}, Current Month = {selected_month}\")\n",
-    "\n",
-    "interact(\n",
-    "    choose_params,\n",
-    "    year=Dropdown(options=years, description=\"Year:\", value=this_year),\n",
-    "    month=Dropdown(options=months, description=\"Month:\", value=(datetime.today().month, datetime.today().strftime(\"%B\")))\n",
+    "Tk().withdraw()\n",
+    "file_path = filedialog.askopenfilename(\n",
+    "    title=\"Select ADWP Data File\",\n",
+    "    filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
     ")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 3: Functions to stream Excel -> CSV\n",
-    "# -------------------------\n",
-    "def excel_sheet_to_csv(excel_path, sheet_name, csv_path):\n",
-    "    wb = load_workbook(filename=excel_path, read_only=True, data_only=True)\n",
-    "    if sheet_name not in wb.sheetnames:\n",
-    "        raise ValueError(f\"Sheet {sheet_name} not found in {excel_path}\")\n",
-    "    ws = wb[sheet_name]\n",
-    "    with open(csv_path, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
-    "        writer = csv.writer(f)\n",
-    "        for row in ws.iter_rows(values_only=True):\n",
-    "            writer.writerow([(\"\" if v is None else v) for v in row])\n",
-    "    wb.close()\n",
+    "if not file_path:\n",
+    "    raise SystemExit(\"❌ No file selected.\")\n",
+    "\n",
+    "print(f\"Selected file: {file_path}\")\n",
     "\n",
     "# -------------------------\n",
-    "# Step 4: Core processing\n",
+    "# Step 2. Dropdowns for Year and Month\n",
     "# -------------------------\n",
-    "def run_adwp(input_file, sheet_name, year, current_month, out_file, chunksize=100000):\n",
-    "    tmp_dir = tempfile.mkdtemp(prefix=\"adwp_\")\n",
-    "    csv_path = os.path.join(tmp_dir, \"data_stream.csv\")\n",
-    "    inter_csv = os.path.join(tmp_dir, \"intermediate.csv\")\n",
-    "    print(\"Temp dir:\", tmp_dir)\n",
+    "current_year = datetime.today().year\n",
     "\n",
-    "    # 1) Stream Excel to CSV\n",
-    "    print(\"Streaming Excel to CSV...\")\n",
-    "    excel_sheet_to_csv(input_file, sheet_name, csv_path)\n",
+    "year_dd = widgets.Dropdown(\n",
+    "    options=[current_year - 1, current_year, current_year + 1],\n",
+    "    value=current_year,\n",
+    "    description=\"Year:\"\n",
+    ")\n",
     "\n",
-    "    # 2) Process in chunks -> intermediate\n",
-    "    cols_needed = [\"PID\",\"MPP ID\",\"GCB\",\"Business Framework\",\"Business Framework Group\",\n",
-    "                   \"Business Service L2\",\"Country R1\",\"Country R2\",\"Country R3\",\n",
-    "                   \"Stack\",\"FTE\",\"Period Month\"]\n",
-    "    first = True\n",
-    "    row_idx = 0\n",
-    "    for chunk in tqdm(pd.read_csv(csv_path, chunksize=chunksize, dtype=str), desc=\"Chunks\"):\n",
-    "        chunk.columns = [c.strip() for c in chunk.columns]\n",
-    "        # keep only needed cols if present\n",
-    "        for col in cols_needed:\n",
-    "            if col not in chunk.columns:\n",
-    "                chunk[col] = \"\"\n",
-    "        chunk[\"PeriodMonth_dt\"] = chunk[\"Period Month\"].apply(first_of_month_from_str)\n",
-    "        chunk[\"MonthLabel\"] = chunk[\"PeriodMonth_dt\"].apply(lambda x: month_label(x) if pd.notna(x) else \"\")\n",
-    "        chunk[\"FTE\"] = pd.to_numeric(chunk[\"FTE\"], errors=\"coerce\")\n",
+    "month_dd = widgets.Dropdown(\n",
+    "    options=list(calendar.month_name)[1:],  # Jan..Dec\n",
+    "    value=calendar.month_name[datetime.today().month],\n",
+    "    description=\"Month:\"\n",
+    ")\n",
     "\n",
-    "        # PosKey\n",
-    "        def build_key(r):\n",
-    "            if r[\"PID\"] not in (\"\", \"nan\", None):\n",
-    "                return f\"PID|{r['PID']}|{r['GCB']}|{r['Business Framework']}\"\n",
-    "            else:\n",
-    "                return f\"MPP|{r['MPP ID']}|{r['GCB']}|{r['Business Framework']}\"\n",
-    "        chunk[\"PosKey\"] = chunk.apply(build_key, axis=1)\n",
+    "display(year_dd, month_dd)\n",
     "\n",
-    "        chunk[\"row_idx\"] = range(row_idx, row_idx+len(chunk))\n",
-    "        row_idx += len(chunk)\n",
+    "# -------------------------\n",
+    "# Step 3. Load data\n",
+    "# -------------------------\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
     "\n",
-    "        if first:\n",
-    "            chunk.to_csv(inter_csv, index=False, mode=\"w\")\n",
-    "            first = False\n",
+    "# Normalize Period Month to first-of-month\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 4. Build 24-month horizon\n",
+    "# -------------------------\n",
+    "sel_year = year_dd.value\n",
+    "sel_month = list(calendar.month_name).index(month_dd.value)\n",
+    "\n",
+    "start_date = datetime(sel_year, 1, 1)  # Jan of selected year\n",
+    "months = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
+    "month_labels = [d.strftime(\"%b-%y\") for d in months]\n",
+    "\n",
+    "curr_date = datetime(sel_year, sel_month, 1)\n",
+    "curr_label = curr_date.strftime(\"%b-%y\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 5. Processing\n",
+    "# -------------------------\n",
+    "output_records = []\n",
+    "\n",
+    "def get_key(row):\n",
+    "    \"\"\"Return grouping key for PID or MPP case.\"\"\"\n",
+    "    if pd.notna(row[\"PID\"]):\n",
+    "        return (\"PID\", row[\"PID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "    else:\n",
+    "        return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "\n",
+    "grouped = df.groupby(df.apply(get_key, axis=1))\n",
+    "\n",
+    "for key, group in grouped:\n",
+    "    kind = key[0]\n",
+    "    group = group.sort_values(\"Period Month\")\n",
+    "\n",
+    "    # Prepare base record\n",
+    "    latest = group.iloc[-1]\n",
+    "    record = {\n",
+    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "        \"Country R1\": latest.get(\"Country R1\"),\n",
+    "        \"Country R2\": latest.get(\"Country R2\"),\n",
+    "        \"Country R3\": latest.get(\"Country R3\"),\n",
+    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "        \"GCB\": latest.get(\"GCB\"),\n",
+    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
+    "    }\n",
+    "\n",
+    "    # Initialize horizon months\n",
+    "    for label in month_labels:\n",
+    "        record[label] = None\n",
+    "\n",
+    "    if kind == \"PID\":\n",
+    "        # ----- Case 1 & 2: PID present -----\n",
+    "        for _, r in group.iterrows():\n",
+    "            month_label = r[\"Period Month\"].strftime(\"%b-%y\")\n",
+    "            if month_label in record:\n",
+    "                record[month_label] = r[\"FTE\"]\n",
+    "\n",
+    "        # Determine latest FTE up to current month\n",
+    "        available_months = [r[\"Period Month\"].strftime(\"%b-%y\") for _, r in group.iterrows()]\n",
+    "        latest_before_curr = None\n",
+    "        for m in month_labels:\n",
+    "            if m in available_months and datetime.strptime(m, \"%b-%y\") <= curr_date:\n",
+    "                latest_before_curr = m\n",
+    "\n",
+    "        if latest_before_curr:\n",
+    "            record[\"FTE\"] = record[latest_before_curr]\n",
     "        else:\n",
-    "            chunk.to_csv(inter_csv, index=False, mode=\"a\", header=False)\n",
+    "            record[\"FTE\"] = group.iloc[-1][\"FTE\"]\n",
     "\n",
-    "    # 3) Read intermediate fully (much smaller than raw)\n",
-    "    df = pd.read_csv(inter_csv, dtype=str)\n",
-    "    df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
-    "    df[\"row_idx\"] = pd.to_numeric(df[\"row_idx\"], errors=\"coerce\")\n",
+    "        # Forward fill only from current month onward with current FTE\n",
+    "        if curr_label in record and record[curr_label] is not None:\n",
+    "            current_fte = record[curr_label]\n",
+    "            start_fill = month_labels.index(curr_label) + 1\n",
+    "            for label in month_labels[start_fill:]:\n",
+    "                record[label] = current_fte\n",
     "\n",
-    "    # Keep last row per PosKey+MonthLabel\n",
-    "    df.sort_values(\"row_idx\", inplace=True)\n",
-    "    df = df.drop_duplicates(subset=[\"PosKey\",\"MonthLabel\"], keep=\"last\")\n",
+    "        output_records.append(record)\n",
     "\n",
-    "    # Horizon labels\n",
-    "    months_list, labels = [], []\n",
-    "    for y in (year, year+1):\n",
-    "        for m in range(1,13):\n",
-    "            d = datetime(y,m,1)\n",
-    "            months_list.append(d)\n",
-    "            labels.append(month_label(d))\n",
+    "    else:\n",
+    "        # ----- Case 3: MPP ID (no PID) -----\n",
+    "        event = group.iloc[0]\n",
+    "        event_month = event[\"Period Month\"].strftime(\"%b-%y\")\n",
+    "        fte_val = event[\"FTE\"]\n",
     "\n",
-    "    # Pivot\n",
-    "    pivot = df.pivot_table(index=\"PosKey\", columns=\"MonthLabel\", values=\"FTE\", aggfunc=\"last\")\n",
-    "    for lbl in labels:\n",
-    "        if lbl not in pivot.columns:\n",
-    "            pivot[lbl] = pd.NA\n",
-    "    pivot = pivot[labels]\n",
+    "        record[\"FTE\"] = fte_val\n",
+    "        if event_month in month_labels:\n",
+    "            start_idx = month_labels.index(event_month)\n",
+    "            for label in month_labels[start_idx:]:\n",
+    "                record[label] = fte_val\n",
     "\n",
-    "    # Dimensions: take last record per PosKey\n",
-    "    dims = df.groupby(\"PosKey\").last().reset_index()\n",
-    "\n",
-    "    final = dims[[\"Business Service L2\",\"Business Framework Group\",\"Business Framework\",\n",
-    "                  \"Country R1\",\"Country R2\",\"Country R3\",\"PID\",\"GCB\",\"MPP ID\",\"Stack\"]].copy()\n",
-    "    final.index = dims[\"PosKey\"]\n",
-    "\n",
-    "    # FTE = current month’s value\n",
-    "    curr_dt = datetime(year, current_month, 1)\n",
-    "    curr_lbl = month_label(curr_dt)\n",
-    "    final[\"FTE\"] = pivot[curr_lbl] if curr_lbl in pivot.columns else pd.NA\n",
-    "\n",
-    "    # Merge month cols\n",
-    "    for lbl in labels:\n",
-    "        final[lbl] = pivot[lbl]\n",
-    "\n",
-    "    # Forward-fill logic\n",
-    "    for idx,row in final.iterrows():\n",
-    "        month_vals = row[labels].copy()\n",
-    "        if row[\"PID\"] not in (\"\", \"nan\", None):\n",
-    "            val = row[\"FTE\"]\n",
-    "            if pd.notna(val):\n",
-    "                for i,d in enumerate(months_list):\n",
-    "                    if d>curr_dt and pd.isna(month_vals.iloc[i]):\n",
-    "                        month_vals.iloc[i]=val\n",
-    "        else:\n",
-    "            first_valid = month_vals.first_valid_index()\n",
-    "            if first_valid:\n",
-    "                fv = month_vals[first_valid]\n",
-    "                start_i = labels.index(first_valid)\n",
-    "                for i in range(start_i,len(labels)):\n",
-    "                    if pd.isna(month_vals.iloc[i]):\n",
-    "                        month_vals.iloc[i]=fv\n",
-    "        for lbl in labels:\n",
-    "            final.at[idx,lbl]=month_vals[lbl]\n",
-    "\n",
-    "    # Order\n",
-    "    ordered = final[[\"Business Service L2\",\"Business Framework Group\",\"Business Framework\",\n",
-    "                     \"Country R1\",\"Country R2\",\"Country R3\",\"PID\",\"GCB\",\"FTE\",\"MPP ID\",\"Stack\"]+labels]\n",
-    "    ordered = ordered.sort_values(by=[\"Business Service L2\",\"Business Framework Group\",\"Business Framework\",\"PID\",\"GCB\"])\n",
-    "\n",
-    "    # Write\n",
-    "    out_path = os.path.join(os.path.dirname(input_file),\"ADWP_Output.xlsx\")\n",
-    "    ordered.to_excel(out_path,index=False,sheet_name=\"Output\")\n",
-    "    print(\"Output written to:\", out_path)\n",
+    "        output_records.append(record)\n",
     "\n",
     "# -------------------------\n",
-    "# Step 5: Run\n",
+    "# Step 6. Build DataFrame\n",
     "# -------------------------\n",
-    "# After selecting year & month in dropdowns, run this cell:\n",
-    "# run_adwp(excel_path, \"Data\", selected_year, selected_month, \"ADWP_Output.xlsx\")\n"
+    "out_df = pd.DataFrame(output_records)\n",
+    "\n",
+    "# Sorting\n",
+    "sort_cols = [\n",
+    "    \"Business Service L2\",\n",
+    "    \"Business Framework Group\",\n",
+    "    \"Business Framework\",\n",
+    "    \"Country R1\",\n",
+    "    \"Country R2\",\n",
+    "    \"Country R3\",\n",
+    "    \"PID\",\n",
+    "    \"MPP ID\",\n",
+    "    \"GCB\"\n",
+    "]\n",
+    "out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 7. Save Output\n",
+    "# -------------------------\n",
+    "out_file = os.path.join(\n",
+    "    os.path.dirname(file_path),\n",
+    "    \"ADWP_Output.xlsx\"\n",
+    ")\n",
+    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "\n",
+    "print(f\"✅ ADWP Output written to: {out_file}\")\n"
    ]
   }
  ],
