--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,18 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e01a7b6",
+   "id": "c6a7ea42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ADWP.ipynb\n",
-    "\n",
     "import pandas as pd\n",
     "import calendar\n",
     "from datetime import datetime\n",
     "from tkinter import Tk, filedialog\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display, clear_output\n",
     "import os\n",
     "\n",
     "# -------------------------\n",
@@ -32,7 +30,7 @@
     "print(f\"Selected file: {file_path}\")\n",
     "\n",
     "# -------------------------\n",
-    "# Step 2. Dropdowns for Year and Month\n",
+    "# Step 2. Dropdowns for Year & Month\n",
     "# -------------------------\n",
     "current_year = datetime.today().year\n",
     "\n",
@@ -48,138 +46,112 @@
     "    description=\"Month:\"\n",
     ")\n",
     "\n",
-    "display(year_dd, month_dd)\n",
+    "ok_button = widgets.Button(description=\"OK\", button_style=\"success\")\n",
+    "output_area = widgets.Output()\n",
+    "\n",
+    "display(widgets.VBox([year_dd, month_dd, ok_button, output_area]))\n",
     "\n",
     "# -------------------------\n",
-    "# Step 3. Load data\n",
+    "# Step 3. Processing function\n",
     "# -------------------------\n",
-    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "def process_adwp(b):\n",
+    "    with output_area:\n",
+    "        clear_output()\n",
+    "        \n",
+    "        # Read Excel\n",
+    "        df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "        df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
+    "        \n",
+    "        # User selections\n",
+    "        sel_year = year_dd.value\n",
+    "        sel_month = list(calendar.month_name).index(month_dd.value)\n",
+    "        curr_date = datetime(sel_year, sel_month, 1)\n",
+    "        \n",
+    "        # 24-month horizon\n",
+    "        start_date = datetime(sel_year, 1, 1)\n",
+    "        horizon = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
+    "        month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
+    "        \n",
+    "        output_records = []\n",
     "\n",
-    "# Normalize Period Month to first-of-month\n",
-    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"]).dt.to_period(\"M\").dt.to_timestamp()\n",
+    "        # Define position key (PID or MPP)\n",
+    "        def get_key(row):\n",
+    "            if pd.notna(row[\"PID\"]):\n",
+    "                return (\"PID\", row[\"PID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "            else:\n",
+    "                return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 4. Build 24-month horizon\n",
-    "# -------------------------\n",
-    "sel_year = year_dd.value\n",
-    "sel_month = list(calendar.month_name).index(month_dd.value)\n",
+    "        grouped = df.groupby(df.apply(get_key, axis=1))\n",
     "\n",
-    "start_date = datetime(sel_year, 1, 1)  # Jan of selected year\n",
-    "months = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
-    "month_labels = [d.strftime(\"%b-%y\") for d in months]\n",
+    "        for key, group in grouped:\n",
+    "            kind = key[0]\n",
+    "            group = group.sort_values(\"Period Month\")\n",
+    "            \n",
+    "            # Prepare base record\n",
+    "            latest = group.iloc[-1]\n",
+    "            record = {\n",
+    "                \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "                \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "                \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "                \"Country R1\": latest.get(\"Country R1\"),\n",
+    "                \"Country R2\": latest.get(\"Country R2\"),\n",
+    "                \"Country R3\": latest.get(\"Country R3\"),\n",
+    "                \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "                \"GCB\": latest.get(\"GCB\"),\n",
+    "                \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "                \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
+    "            }\n",
     "\n",
-    "curr_date = datetime(sel_year, sel_month, 1)\n",
-    "curr_label = curr_date.strftime(\"%b-%y\")\n",
+    "            # Initialize all months to None\n",
+    "            for label in month_labels:\n",
+    "                record[label] = None\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 5. Processing\n",
-    "# -------------------------\n",
-    "output_records = []\n",
+    "            # Carry-forward logic\n",
+    "            last_fte = None\n",
+    "            for month in month_labels:\n",
+    "                month_dt = datetime.strptime(month, \"%b-%y\")\n",
+    "                # Check if group has FTE for this month\n",
+    "                row = group[group[\"Period Month\"] == month_dt]\n",
+    "                if not row.empty:\n",
+    "                    last_fte = row[\"FTE\"].iloc[0]\n",
+    "                # Fill FTE forward\n",
+    "                if last_fte is not None:\n",
+    "                    record[month] = last_fte\n",
+    "                # Mark FTE column as latest available <= current month\n",
+    "                if month_dt <= curr_date and record[month] is not None:\n",
+    "                    record[\"FTE\"] = record[month]\n",
     "\n",
-    "def get_key(row):\n",
-    "    \"\"\"Return grouping key for PID or MPP case.\"\"\"\n",
-    "    if pd.notna(row[\"PID\"]):\n",
-    "        return (\"PID\", row[\"PID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
-    "    else:\n",
-    "        return (\"MPP\", row[\"MPP ID\"], row[\"GCB\"], row[\"Business Framework\"])\n",
+    "            output_records.append(record)\n",
     "\n",
-    "grouped = df.groupby(df.apply(get_key, axis=1))\n",
+    "        # Build DataFrame\n",
+    "        out_df = pd.DataFrame(output_records)\n",
     "\n",
-    "for key, group in grouped:\n",
-    "    kind = key[0]\n",
-    "    group = group.sort_values(\"Period Month\")\n",
+    "        # Sorting\n",
+    "        sort_cols = [\n",
+    "            \"Business Service L2\",\n",
+    "            \"Business Framework Group\",\n",
+    "            \"Business Framework\",\n",
+    "            \"Country R1\",\n",
+    "            \"Country R2\",\n",
+    "            \"Country R3\",\n",
+    "            \"PID\",\n",
+    "            \"MPP ID\",\n",
+    "            \"GCB\"\n",
+    "        ]\n",
+    "        out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
-    "    # Prepare base record\n",
-    "    latest = group.iloc[-1]\n",
-    "    record = {\n",
-    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
-    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
-    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
-    "        \"Country R1\": latest.get(\"Country R1\"),\n",
-    "        \"Country R2\": latest.get(\"Country R2\"),\n",
-    "        \"Country R3\": latest.get(\"Country R3\"),\n",
-    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
-    "        \"GCB\": latest.get(\"GCB\"),\n",
-    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
-    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
-    "    }\n",
+    "        # Save output\n",
+    "        out_file = os.path.join(\n",
+    "            os.path.dirname(file_path),\n",
+    "            f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
+    "        )\n",
+    "        with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "            out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
     "\n",
-    "    # Initialize horizon months\n",
-    "    for label in month_labels:\n",
-    "        record[label] = None\n",
+    "        print(f\"✅ ADWP Output written to: {out_file}\")\n",
+    "        print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns)}\")\n",
     "\n",
-    "    if kind == \"PID\":\n",
-    "        # ----- Case 1 & 2: PID present -----\n",
-    "        for _, r in group.iterrows():\n",
-    "            month_label = r[\"Period Month\"].strftime(\"%b-%y\")\n",
-    "            if month_label in record:\n",
-    "                record[month_label] = r[\"FTE\"]\n",
-    "\n",
-    "        # Determine latest FTE up to current month\n",
-    "        available_months = [r[\"Period Month\"].strftime(\"%b-%y\") for _, r in group.iterrows()]\n",
-    "        latest_before_curr = None\n",
-    "        for m in month_labels:\n",
-    "            if m in available_months and datetime.strptime(m, \"%b-%y\") <= curr_date:\n",
-    "                latest_before_curr = m\n",
-    "\n",
-    "        if latest_before_curr:\n",
-    "            record[\"FTE\"] = record[latest_before_curr]\n",
-    "        else:\n",
-    "            record[\"FTE\"] = group.iloc[-1][\"FTE\"]\n",
-    "\n",
-    "        # Forward fill only from current month onward with current FTE\n",
-    "        if curr_label in record and record[curr_label] is not None:\n",
-    "            current_fte = record[curr_label]\n",
-    "            start_fill = month_labels.index(curr_label) + 1\n",
-    "            for label in month_labels[start_fill:]:\n",
-    "                record[label] = current_fte\n",
-    "\n",
-    "        output_records.append(record)\n",
-    "\n",
-    "    else:\n",
-    "        # ----- Case 3: MPP ID (no PID) -----\n",
-    "        event = group.iloc[0]\n",
-    "        event_month = event[\"Period Month\"].strftime(\"%b-%y\")\n",
-    "        fte_val = event[\"FTE\"]\n",
-    "\n",
-    "        record[\"FTE\"] = fte_val\n",
-    "        if event_month in month_labels:\n",
-    "            start_idx = month_labels.index(event_month)\n",
-    "            for label in month_labels[start_idx:]:\n",
-    "                record[label] = fte_val\n",
-    "\n",
-    "        output_records.append(record)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 6. Build DataFrame\n",
-    "# -------------------------\n",
-    "out_df = pd.DataFrame(output_records)\n",
-    "\n",
-    "# Sorting\n",
-    "sort_cols = [\n",
-    "    \"Business Service L2\",\n",
-    "    \"Business Framework Group\",\n",
-    "    \"Business Framework\",\n",
-    "    \"Country R1\",\n",
-    "    \"Country R2\",\n",
-    "    \"Country R3\",\n",
-    "    \"PID\",\n",
-    "    \"MPP ID\",\n",
-    "    \"GCB\"\n",
-    "]\n",
-    "out_df = out_df.sort_values(sort_cols, na_position=\"last\").reset_index(drop=True)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 7. Save Output\n",
-    "# -------------------------\n",
-    "out_file = os.path.join(\n",
-    "    os.path.dirname(file_path),\n",
-    "    \"ADWP_Output.xlsx\"\n",
-    ")\n",
-    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
-    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
-    "\n",
-    "print(f\"✅ ADWP Output written to: {out_file}\")\n"
+    "ok_button.on_click(process_adwp)\n"
    ]
   }
  ],
